--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,14 @@
 #container a {
   text-decoration: none;
 }
+
+.profile-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 90%;
+  margin: auto;
+}
+
+.full-width {
+  width: 100%;
+}
