--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,31 +1,58 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title id="title">
-      My App
+      My Form
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" id="title">My App</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Nombre</strong>
+<ion-content>
+  <form [formGroup]="FormField" (ngSubmit)="submit(FormField.value)" class="form-style">
+    <ion-item>
+      <ion-label> Nombre </ion-label>
+      <ion-input formControlName="nombre"> </ion-input>
+    </ion-item>
+    <ng-container *ngFor="let validation of ValidationField.nombre">
+      <div
+        *ngIf="FormField.get('nombre').hasError(validation.type)&&(FormField.get('nombre').dirty)">
+        {{validation.message}}
+      </div>
+    </ng-container>
+    <ion-item>
+      <ion-label> Apellido </ion-label>
+      <ion-input formControlName="apellido"> </ion-input>
+    </ion-item>
+    <ng-container *ngFor="let validation of ValidationField.apellido">
+      <div
+        *ngIf="FormField.get('apellido').hasError(validation.type)&&(FormField.get('apellido').dirty)">
+        {{validation.message}}
+      </div>
+    </ng-container>
+    <ion-item>
+      <ion-label> Email </ion-label>
+      <ion-input formControlName="email"> </ion-input>
+    </ion-item>
     <div>
-      <form class="example-form">
-        <mat-form-field class="example-full-width">
-          <mat-label>Ingresa nombre</mat-label>
-          <input type="text" matInput placeholder="Nombre" (input)="onKeyPressEvent($event)" />
-          <mat-error *ngIf="!entrada">
-            Solo puedes ingresar caractéres alfabéticos y especios, intenta de nuevo.
-          </mat-error>
-        </mat-form-field>
-      </form>
+      <ng-container *ngFor="let validation of ValidationField.email">
+        <div
+          *ngIf="FormField.get('email').hasError(validation.type)&& (FormField.get('email').dirty)">
+          {{validation.message}}
+        </div>
+      </ng-container>
     </div>
-    <button mat-raised-button color="tertiary" [disabled]="!entrada">Validar</button>
-  </div>
+    <ion-item>
+      <ion-label  position="floating">Contraseña</ion-label>
+      <ion-input  #passwordEyeRegister  [type]="passwordTypeInput"  formControlName="password"></ion-input>
+      <button  item-end  class="btn_eye_icon"  (click)="togglePasswordMode()">
+          <ion-icon  [name]="iconpassword"></ion-icon>
+      </button>
+  </ion-item>
+    <ng-container *ngFor="let validation of ValidationField.password">
+      <div
+        *ngIf="FormField.get('password').hasError(validation.type)&&(FormField.get('password').dirty)">
+        {{validation.message}}
+      </div>
+    </ng-container>
+    <ion-button expand="full" shape="round" color="success" [disabled]="!FormField.valid" type="submit">Validado</ion-button>
+  </form>
 </ion-content>
