--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -8,6 +8,26 @@
   transform: translateY(-50%);
 }
 
+.form-style {
+ min-width : 100px;
+ max-width : 600px;
+ width: 80%;
+ margin: auto;
+}
+.btn_eye_icon{
+  position: absolute;
+  right: 0;
+  bottom: 4px;
+  background: transparent;
+  ion-icon{
+      font-size: 22px;
+      color:#757575;
+  }
+}
+
+.btn_eye_icon:focus{
+  outline: none  !important;
+}
 #container strong {
   font-size: 20px;
   line-height: 26px;
