--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -51,7 +51,7 @@
     <section>
       <div class="example-label">¿Deseas mostrar el formulario en consola?</div>
       <div class="example-button-row">
-        <button mat-raised-button type="submit"  [disabled]=!formularioReactivo.valid (click)=usersSrv.getUsers()>Submit</button>
+        <button mat-raised-button type="submit"  [disabled]=!formularioReactivo.valid (click)=submit()>Submit</button>
       </div>
     </section>
   </div>
