--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,8 +14,11 @@
   </ion-header>
 
   <div id="container">
-   <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="profile-form">
-     <!-- NOMBRE -->
+    <div id="spinner-container" *ngIf="formSubmiting">
+      <mat-spinner></mat-spinner>
+    </div>
+    <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="profile-form">
+      <!-- NOMBRE -->
       <mat-form-field class="full-width">
         <mat-label>Nombre</mat-label>
         <input matInput formControlName="nombreFormControl" placeholder="Nombre">
@@ -64,6 +67,6 @@
         </mat-error>
       </mat-form-field>
       <button mat-raised-button type="submit" color="primary" [disabled]="!profileForm.valid">Sumbit</button>
-   </form>
+    </form>
   </div>
 </ion-content>
