--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -54,6 +54,11 @@
         <button mat-raised-button type="submit"  [disabled]=!formularioReactivo.valid (click)=submit()>Submit</button>
       </div>
     </section>
+    <section>
+      <div id="spinner1" *ngIf="loading">
+        <mat-spinner></mat-spinner>
+      </div>
+    </section>
   </div>
 
   
